SegCode is completed and Works, SegmModel Halfway through

--- a/V2_dev/SABRE2-V3.ui
+++ b/V2_dev/SABRE2-V3.ui
@@ -461,7 +461,7 @@
        <enum>QTabWidget::Triangular</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="iconSize">
        <size>
@@ -744,7 +744,7 @@
            </size>
           </property>
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="Member_Def">
            <attribute name="title">
@@ -1100,13 +1100,6 @@
               <property name="sizeConstraint">
                <enum>QLayout::SetMaximumSize</enum>
               </property>
-              <item row="1" column="0">
-               <widget class="QLabel" name="AdditionalNodeLabel">
-                <property name="text">
-                 <string>Additional Node Number :</string>
-                </property>
-               </widget>
-              </item>
               <item row="2" column="1">
                <widget class="QLineEdit" name="AddNodePositionFrom">
                 <property name="maximumSize">
@@ -1114,6 +1107,13 @@
                   <width>230</width>
                   <height>16777215</height>
                  </size>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="AddPositionLabel">
+                <property name="text">
+                 <string>Pozition of Additional Node from Node i :</string>
                 </property>
                </widget>
               </item>
@@ -1132,6 +1132,19 @@
                 </item>
                </widget>
               </item>
+              <item row="1" column="3">
+               <spacer name="horizontalSpacer_7">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
               <item row="1" column="1">
                <widget class="QComboBox" name="AdditionalNodeNumberComboBox">
                 <property name="maximumSize">
@@ -1149,57 +1162,6 @@
                  </property>
                 </item>
                </widget>
-              </item>
-              <item row="2" column="0">
-               <widget class="QLabel" name="AddPositionLabel">
-                <property name="text">
-                 <string>Pozition of Additional Node from Node i :</string>
-                </property>
-               </widget>
-              </item>
-              <item row="3" column="1">
-               <layout class="QHBoxLayout" name="horizontalLayout_22">
-                <item>
-                 <widget class="QRadioButton" name="StepRB1">
-                  <property name="text">
-                   <string>No Step</string>
-                  </property>
-                  <property name="checked">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QRadioButton" name="StepRB2">
-                  <property name="text">
-                   <string>Step</string>
-                  </property>
-                  <property name="checked">
-                   <bool>false</bool>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item row="0" column="0">
-               <widget class="QLabel" name="SelectMemberLabel">
-                <property name="text">
-                 <string>Select Member :</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="2">
-               <spacer name="horizontalSpacer_7">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>40</width>
-                  <height>20</height>
-                 </size>
-                </property>
-               </spacer>
               </item>
               <item row="3" column="0">
                <layout class="QHBoxLayout" name="horizontalLayout_24">
@@ -1282,6 +1244,55 @@
                  </widget>
                 </item>
                </layout>
+              </item>
+              <item row="3" column="1">
+               <layout class="QHBoxLayout" name="horizontalLayout_22">
+                <item>
+                 <widget class="QRadioButton" name="StepRB1">
+                  <property name="text">
+                   <string>No Step</string>
+                  </property>
+                  <property name="checked">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QRadioButton" name="StepRB2">
+                  <property name="text">
+                   <string>Step</string>
+                  </property>
+                  <property name="checked">
+                   <bool>false</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item row="0" column="0">
+               <widget class="QLabel" name="SelectMemberLabel">
+                <property name="text">
+                 <string>Select Member :</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="AdditionalNodeLabel">
+                <property name="text">
+                 <string>Additional Node Number :</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="2">
+               <widget class="QPushButton" name="FollowTaper">
+                <property name="styleSheet">
+                 <string notr="true">QPushButton{
+rgb(170, 255, 255)}</string>
+                </property>
+                <property name="text">
+                 <string>Follow Taper!</string>
+                </property>
+               </widget>
               </item>
              </layout>
             </item>
