--- a/V2_dev/SABRE2-V3.ui
+++ b/V2_dev/SABRE2-V3.ui
@@ -461,7 +461,7 @@
        <enum>QTabWidget::Triangular</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <property name="iconSize">
        <size>
@@ -744,7 +744,7 @@
            </size>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="Member_Def">
            <attribute name="title">
@@ -1100,50 +1100,12 @@
               <property name="sizeConstraint">
                <enum>QLayout::SetMaximumSize</enum>
               </property>
-              <item row="2" column="1">
-               <widget class="QLineEdit" name="AddNodePositionFrom">
-                <property name="maximumSize">
-                 <size>
-                  <width>230</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-               </widget>
-              </item>
               <item row="2" column="0">
                <widget class="QLabel" name="AddPositionLabel">
                 <property name="text">
                  <string>Pozition of Additional Node from Node i :</string>
                 </property>
                </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QComboBox" name="AddNodeMember">
-                <property name="maximumSize">
-                 <size>
-                  <width>230</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <item>
-                 <property name="text">
-                  <string>1</string>
-                 </property>
-                </item>
-               </widget>
-              </item>
-              <item row="1" column="3">
-               <spacer name="horizontalSpacer_7">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>40</width>
-                  <height>20</height>
-                 </size>
-                </property>
-               </spacer>
               </item>
               <item row="1" column="1">
                <widget class="QComboBox" name="AdditionalNodeNumberComboBox">
@@ -1161,6 +1123,16 @@
                   <string>1</string>
                  </property>
                 </item>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QLineEdit" name="AddNodePositionFrom">
+                <property name="maximumSize">
+                 <size>
+                  <width>230</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
                </widget>
               </item>
               <item row="3" column="0">
@@ -1245,6 +1217,28 @@
                 </item>
                </layout>
               </item>
+              <item row="0" column="1">
+               <widget class="QComboBox" name="AddNodeMember">
+                <property name="maximumSize">
+                 <size>
+                  <width>230</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <item>
+                 <property name="text">
+                  <string>1</string>
+                 </property>
+                </item>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QLabel" name="SelectMemberLabel">
+                <property name="text">
+                 <string>Select Member :</string>
+                </property>
+               </widget>
+              </item>
               <item row="3" column="1">
                <layout class="QHBoxLayout" name="horizontalLayout_22">
                 <item>
@@ -1269,13 +1263,6 @@
                 </item>
                </layout>
               </item>
-              <item row="0" column="0">
-               <widget class="QLabel" name="SelectMemberLabel">
-                <property name="text">
-                 <string>Select Member :</string>
-                </property>
-               </widget>
-              </item>
               <item row="1" column="0">
                <widget class="QLabel" name="AdditionalNodeLabel">
                 <property name="text">
@@ -1291,6 +1278,26 @@ rgb(170, 255, 255)}</string>
                 </property>
                 <property name="text">
                  <string>Follow Taper!</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="4">
+               <spacer name="horizontalSpacer_7">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item row="1" column="2">
+               <widget class="QPushButton" name="RemoveAddedNodePB">
+                <property name="text">
+                 <string>Remove Selected</string>
                 </property>
                </widget>
               </item>
